apps/test/deploy.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test
spec:
  replicas: 5
  selector:
    matchLabels:
        app: tspproject
        tier: test
  template:
    metadata:
      labels:
        app: tspproject
        tier: test
    spec:
      containers:
        - name: myfrontend
          image: habib02/tsp-projet-app:1
          ports:
            - containerPort: 80
     
---
apiVersion: v1
kind: Service
metadata:
  name: test
  labels:
    app: tspproject
    tier: test
spec:
  # if your cluster supports it, uncomment the following to automatically create
  # an external load-balanced IP for the frontend service.
  #type: LoadBalancer
  type: NodePort
  ports:
    # the port that this service should serve on
  - port: 80
  selector:
    app: tspproject
    tier: test
