apps/test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-http","kubernetes.io/ingress.class":"nginx","nginx.ingress.kubernetes.io/hsts":"true","nginx.ingress.kubernetes.io/hsts-max-age":"31536000","nginx.ingress.kubernetes.io/proxy-body-size":"32m","nginx.ingress.kubernetes.io/ssl-redirect":"true"},"name":"test-site","namespace":"test"},"spec":{"ingressClassName":"nginx","rules":[{"host":"test.79.174.84.176.sslip.io","ht [...]
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/hsts: "true"
    nginx.ingress.kubernetes.io/hsts-max-age: "31536000"
    nginx.ingress.kubernetes.io/proxy-body-size: 32m
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  creationTimestamp: "2025-09-28T14:50:17Z"
  generation: 1
  name: test-site
  namespace: test
  resourceVersion: "2207"
  uid: 4cb58332-891a-42a3-96c9-9fa13fe85b02
spec:
  ingressClassName: nginx
  rules:
  - host: test.79.174.84.176.sslip.io
    http:
      paths:
      - backend:
          service:
            name: test-web
            port:
              number: 80
        path: /
        pathType: Prefix
      - backend:
          service:
            name: test-api
            port:
              number: 8080
        path: /api
        pathType: Prefix
  tls:
  - hosts:
    - test.79.174.84.176.sslip.io
    secretName: test-site-tls
status:
  loadBalancer:
    ingress:
    - ip: 192.168.0.112
