apps/test/test-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test
spec:
  ports:
  - port: 8888
    targetPort: 80
  selector:
    app: test
